--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
       
         
-          <p>今天想来说说二分查找，因为最近笔者的同学在面试时正好遇到了而自己以前还真没认真研究过。</p>
+          <p>今天想来说说二分查找，因为最近笔者的同学在面试时正好遇到了，而自己以前还真没认真研究过。</p>
 <p>说起二分查找，对算法和数据结构比较熟悉的都知道这是一个复杂度为 <code>O(logN)</code> 的典型<strong>分治</strong>算法，它的用途是在<strong>有序数组</strong>中查找某个数是否存在。但就是这么听起来很普通的算法却常常很难完全写对。</p>
 <ul>
 <li>据D.Knuth在《计算机程序设计的艺术 第3卷：排序和查找》书中指出，虽然二分查找1946年就公诸于世，但1962年才有人写出没有 bug 的二分查找程序。</li>
